--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -77,6 +77,10 @@
                         flex-direction: column;
                         align-items: center;
 
+                        &:first-child {
+                            padding-top: 17px;
+                        }
+
                         &:last-child {
                             padding-bottom: 800px;
                         }
