--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,7 @@ $bgDark: #37383C;
 $bgDarkTwo: #222326;
 $colorPrimary: #572EE5;
 $colorSecundary:  #50E3C2;
+$underLine: #5ED7C6;
 $colorActive: #9CAFC3;
 $colorBlack: #000;
 $borde: 1px solid;
