--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,109 +6,102 @@
         top: 0;
         background: $bgOne;
         border-top: 5px solid $colorPrimary;
-        //padding: 2.8% 6.9% 1.6% 5.9%;
-        //border: $borde;
     
         nav {
             display: flex;
             flex-direction: column;
-            
-            //border: $borde;
-
+    
             .logo {
                 width: 100%;
                 padding: 1em;
-
+    
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
-
+    
                 .burger {
                     width: 15px;
                     height: 15px;
                     background: url('../assets/icons/burger.svg') no-repeat;
                 }
-
+    
                 .burgerAct {
                     background: url('../assets/icons/close.svg') no-repeat;
                 }
-
+    
                 &.dark {
                     #logoPpal {
-                        content: url('../assets/icons/logo-mobile-modo-noct.svg') ;
+                        content: url('../assets/icons/logo-mobile-modo-noct.svg');
                     }
-
+    
                     .burger {
                         background: url('../assets/icons/burger-modo-noct.svg') no-repeat;
                     }
-
+    
                     .burgerAct {
                         background: url('../assets/icons/close-modo-noct.svg') no-repeat;
                     }
                 }
             }
-
-            .on {
+    
+            .off {
                 display: none;
             }
-
+    
             .menu {
                 width: 100%;
                 height: 500px;
                 @extend %menu;
-
-                //display: none;
-                //flex-direction: column;
-                //align-items: flex-start;
-
+    
                 ul {
                     width: 100%;
                     text-decoration: none;
-
+    
+                    list-style: none;
+                    text-align: center;
+                    background: rgba($colorPrimary, 0.9);
+    
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+    
                     li {
                         width: 100%;
-                        //height: 100%;
-                        list-style: none;
-                        text-align: center;
-                        background: rgba($colorPrimary, 0.9);
-
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-
+    
                         &:first-child {
                             padding-top: 17px;
                         }
-
+    
                         &:last-child {
                             padding-bottom: 800px;
                         }
-
+    
                         a {
                             @extend %a;
                         }
-
+    
                         span {
                             width: 41px;
                             border: 1px solid $bgOne;
                             opacity: 0.5;
                         }
                     }
-
+    
                     img {
                         display: none;
                     }
-                }
-
-                &.dark {
-                    li {
+    
+                    &.dark {
                         background: $colorBlack;
                     }
                 }
             }
         }
-
+    
         &.dark {
             background: $bgDark;
             border-top: 5px solid $colorBlack;
