--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@
   background: url("../assets/icons/close-modo-noct.svg") no-repeat;
 }
 
-#container header nav .on {
+#container header nav .off {
   display: none;
 }
 
@@ -161,10 +161,6 @@
 #container header nav .menu ul {
   width: 100%;
   text-decoration: none;
-}
-
-#container header nav .menu ul li {
-  width: 100%;
   list-style: none;
   text-align: center;
   background: rgba(87, 46, 229, 0.9);
@@ -178,6 +174,24 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#container header nav .menu ul li {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#container header nav .menu ul li:first-child {
+  padding-top: 17px;
 }
 
 #container header nav .menu ul li:last-child {
@@ -194,7 +208,7 @@
   display: none;
 }
 
-#container header nav .menu.dark li {
+#container header nav .menu ul.dark {
   background: #000;
 }
 
@@ -1015,6 +1029,12 @@
   #container header nav .logo #burger {
     display: none;
   }
+  #container header nav .logo.dark #logoPpal {
+    content: url("../assets/icons/Logo-modo-noc.svg");
+  }
+  #container header nav .off {
+    display: none;
+  }
   #container header nav .menu {
     width: 100%;
     height: 90px;
@@ -1025,6 +1045,7 @@
   #container header nav .menu ul {
     width: 50%;
     margin: auto;
+    background: #FFF;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1046,6 +1067,9 @@
         -ms-flex-align: center;
             align-items: center;
   }
+  #container header nav .menu ul li:first-child {
+    padding-top: unset;
+  }
   #container header nav .menu ul li:last-child {
     padding-bottom: 0;
   }
@@ -1058,6 +1082,15 @@
     letter-spacing: 0;
     text-align: center;
     text-decoration: none;
+  }
+  #container header nav .menu ul li a:hover {
+    border-bottom: 2px solid #5ED7C6;
+  }
+  #container header nav .menu ul li a:hover:last-child {
+    border-bottom: unset;
+  }
+  #container header nav .menu ul li a:active {
+    color: #9CAFC3;
   }
   #container header nav .menu ul li span {
     display: none;
@@ -1079,14 +1112,14 @@
     background: #37383C;
     content: url("../assets/icons/CTA-crear-gifo-hover-modo-noc.svg");
   }
-  #container header nav .menu.dark li {
+  #container header nav .menu ul.dark {
     background: #37383C;
   }
-  #container header nav .menu.dark li a {
-    color: #FFF;
+  #container header nav .menu ul.dark li {
+    background: #37383C;
   }
-  #container header nav .menu.dark img:hover {
-    background: #FFF;
+  #container header nav .menu ul.dark a {
+    color: #FFF;
   }
   #container main #inspirate h1 {
     width: 40%;
